2016-12-20 Fred Gleason <fredg@paravelsystems.com>
	* Refactored the Windows MME driver so as not to deadlock when
	playing File Server sources.
2017-09-04 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/glassplayer/dev_alsa.cpp' that caused a hang
	at startup for File Server sources shorter than 2*samplerate frames.
	* Added a workaround for a bug in ALSA that causes garbage to be
	appended to the final PCM block written.
2017-09-04 Fred Gleason <fredg@paravelsystems.com>
	* Added a '--pregap=' option to glassplayer(1).
2017-09-04 Fred Gleason <fredg@paravelsystems.com>
	* Documented the '--pregap=' option in the glasscoder(1) man page.
	* Fixed a typo in the entry for the --stats-out' option in the
	glasscoder(1) man page.
2017-09-08 Fred Gleason <fredg@paravelsystems.com>
	* Added an internal tone generator.
2017-09-08 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.7.0.
2017-09-08 Fred Gleason <fredg@paravelsystems.com>
	* Modified 'src/glassplayer/conn_siggen.cpp' to avoid use of the
	'exp10()' function.
2019-03-22 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in glassplayer(1) that caused an incorrect default
	port to be used when accessing HTTPS resources.
	* Fixed a bug in glassplayer(1) that caused HLS playout to fail
	when using HTTPS.
2019-03-25 Fred Gleason <fredg@paravelsystems.com>
	* Changed the User Agent string of glassplayer(1) to
	'GlassPlayer/<version>'.
	* Changed the User Agent string of glassplayergui(1) to
	'GlassPlayerGui/<version>'.
2019-03-25 Fred Gleason <fredg@paravelsystems.com>
	* Added support for processing '#EXT-X-STREAM-INF' headers in
	master HLS playlists.
2019-04-04 Fred Gleason <fredg@paravelsystems.com>
	* Stubbed out support for HLS timed metadata.
2019-08-09 Fred Gleason <fredg@paravelsystems.com>
	* Added a TagLib dependency.
2019-08-12 Fred Gleason <fredg@paravelsystems.com>
	* Added MIME type 'audio/aac' as accepted by the FDK-AAC codec.