@@ -2,7 +2,7 @@
 //
 // Server connector for Icecast/Shoutcast streams.
 //
-//   (C) Copyright 2014-2016 Fred Gleason <fredg@paravelsystems.com>
+//   (C) Copyright 2014-2019 Fred Gleason <fredg@paravelsystems.com>
 //
 //   This program is free software; you can redistribute it and/or modify
 //   it under the terms of the GNU General Public License version 2 as
@@ -238,7 +238,7 @@ void XCast::ProcessHeader(const QString &str)
 {
   QStringList f0;
 
-  //  fprintf(stderr,"%s\n",(const char *)str.toUtf8());
+  fprintf(stderr,"%s\n",(const char *)str.toUtf8());
 
   if(xcast_result_code==0) {
     f0=str.split(" ",QString::SkipEmptyParts);
@@ -273,22 +273,22 @@ void XCast::ProcessHeader(const QString &str)
 	setAudioBitrate(value.toInt());
       }
       if(hdr=="icy-description") {
-	setMetadataField(xcast_byte_counter,MetaEvent::Description,value);
+	setMetadataField(xcast_byte_counter,"icy-description",value);
       }
       if(hdr=="icy-genre") {
-	setMetadataField(xcast_byte_counter,MetaEvent::Genre,value);
+	setMetadataField(xcast_byte_counter,"icy-genre",value);
       }
       if(hdr=="icy-metaint") {
 	xcast_metadata_interval=value.toInt();
       }
       if(hdr=="icy-name") {
-	setMetadataField(xcast_byte_counter,MetaEvent::Name,value);
+	setMetadataField(xcast_byte_counter,"icy-name",value);
       }
       if(hdr=="icy-public") {
-	setMetadataField(xcast_byte_counter,MetaEvent::Public,value.toInt()!=0);
+	setMetadataField(xcast_byte_counter,"icy-public",value);
       }
       if(hdr=="icy-url") {
-	setMetadataField(xcast_byte_counter,MetaEvent::Url,value);
+	setMetadataField(xcast_byte_counter,"icy_url",value);
       }
     }
   }
@@ -301,16 +301,25 @@ void XCast::ProcessMetadata(const QByteArray &mdata)
     QStringList f0=QString(mdata).split(";",QString::SkipEmptyParts);
     for(int i=0;i<f0.size();i++) {
       QStringList f1=f0[i].split("=");
+      if(f1.size()>1) {
+	QString key=f1.at(0).trimmed();
+	f1.removeFirst();
+	QString value=f1.join("=").trimmed();
+	value=value.mid(1,value.length()-2);
+	setMetadataField(xcast_byte_counter,key,value);
+      }
+      /*
       if(f1[0]=="StreamTitle") {
 	QString title=f1.join("=");
-	setMetadataField(xcast_byte_counter,MetaEvent::StreamTitle,
+	setMetadataField(xcast_byte_counter,"StreamTitle",
 			 title.mid(13,title.length()-14));
       }
       if(f1[0]=="StreamUrl") {
 	QString url=f1.join("=");
-	setMetadataField(xcast_byte_counter,MetaEvent::StreamUrl,
+	setMetadataField(xcast_byte_counter,"StreamUrl",
 			 url.mid(11,url.length()-12));
       }
+      */
     }
   }
 }
